Fixed ARIA Error: Empty Button with Visibly Hidden Text

--- a/css/core.css
+++ b/css/core.css
@@ -105,6 +105,20 @@ a.hero-link {
   top: -50px;
 }
 
+.visually-hidden {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding-bottom: 0 !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  padding-top: 0 !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+}
+
 /* Global Nav Styles */
 .autohide {
   position: fixed;
